Removed dependency on langtools.